# api-creditos-pymes

./: .env.example  .gitignore  README.md  SPECIFICATION.md  init_db.sql  pyproject.toml
app/: bootstrap.py  config.py  dependencies.py  exception_handlers.py  main.py
app/core/: enums.py  errors.py
app/dependencies/: auth.py  db.py  services.py
app/models/: __init__.py  company.py  credit_application.py  document.py  profile.py  user.py
app/repositories/: companies_repository.py  credit_applications_repository.py  documents_repository.py  profiles_repository.py  protocols.py  user_repository.py
app/routers/: __init__.py  auth.py  companies.py  credit_applications.py  documents.py  metadata.py  profiles.py
app/schemas/: auth.py  company.py  credit_application.py  document.py  pagination.py  profile.py
app/services/: base_service.py  company_service.py  credit_application_service.py  document_service.py  profile_service.py  user_service.py
