[project]
name = "api-creditos-pymes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.118.0",
    "pydantic-settings>=2.11.0",
    "pyjwt[crypto]>=2.10.1",
    "supabase>=2.21.1",
]
